--- a/WebContent/pages/geral/header.html
+++ b/WebContent/pages/geral/header.html
@@ -1,7 +1,6 @@
 <header class="main-header">
 	<a href="../pages/index.html"><img class="logo" src="/laPadocca-PI/imgs/logo.png"
 		alt="logo LaPadocca" ></a>
-		
 
 	<nav>
 		<div class="item-menu" onclick="LAPADOCCA.carregaPagina('categoria')">
@@ -24,7 +23,7 @@
 			<br>Relátorios
 		</div>
 
-		<div class="item-menu">
+		<div class="item-menu" onclick="LAPADOCCA.carregaPagina('vendas')">
 			<img src="../imgs/iconeVendas.png" alt="Icone de Vendas">
 			<br>Vendas
 		</div>
