--- a/WebContent/pages/index.html
+++ b/WebContent/pages/index.html
@@ -9,20 +9,11 @@
 
 <title>LaPadocca</title>
 
-<script src="https://code.jquery.com/jquery-3.4.1.min.js"
-	integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-	crossorigin="anonymous"></script>
-
-<script src="../js/site.js"></script>
-
+<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 <link rel="stylesheet" type="text/css" href="../css/site.css">
-
 <script src="../js/jquery-ui.js"></script>
-
 <link rel="stylesheet" type="text/css" href="../css/jquery-ui.css">
-
-<!-- Importando o SweetAlert para utilização do alertas customizados -->
-<script src="../js/sweet-alert.js"></script>
+<script src="../js/site.js"></script>
 
 </head>
 <body>
